--- a/arch/arm/mach-bcm2709/Makefile
+++ b/arch/arm/mach-bcm2709/Makefile
@@ -5,3 +5,4 @@
 obj-$(CONFIG_MACH_BCM2709) 	+= bcm2709.o armctrl.o vcio.o power.o dma.o
 obj-$(CONFIG_BCM2708_GPIO)	+= bcm2708_gpio.o
 obj-$(CONFIG_BCM2708_VCMEM)	+= vc_mem.o
+obj-$(CONFIG_BCM2708_DMAER)	+= dmaer.o vc_support.o
