--- a/arch/arm/configs/cyanogenmod_rpiv2_defconfig
+++ b/arch/arm/configs/cyanogenmod_rpiv2_defconfig
@@ -30,7 +30,7 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="android-v7"
+CONFIG_LOCALVERSION="-v7"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -347,7 +347,7 @@ CONFIG_BCM2708_SPIDEV=y
 #
 CONFIG_MACH_BCM2709=y
 CONFIG_BCM2709_DT=y
-CONFIG_BCM2708_DMAER=y
+# CONFIG_BCM2708_DMAER is not set
 
 #
 # Processor Type
@@ -466,7 +466,7 @@ CONFIG_DEFAULT_MMAP_MIN_ADDR=4096
 CONFIG_CLEANCACHE=y
 CONFIG_FRONTSWAP=y
 CONFIG_CMA=y
-CONFIG_CMA_DEBUG=y
+# CONFIG_CMA_DEBUG is not set
 CONFIG_CMA_AREAS=7
 # CONFIG_ZSWAP is not set
 # CONFIG_ZPOOL is not set
@@ -3673,9 +3673,7 @@ CONFIG_ANDROID_INTF_ALARM_DEV=y
 CONFIG_SYNC=y
 CONFIG_SW_SYNC=y
 CONFIG_SW_SYNC_USER=y
-CONFIG_ION=y
-CONFIG_ION_TEST=m
-CONFIG_ION_DUMMY=y
+# CONFIG_ION is not set
 # CONFIG_USB_WPAN_HCD is not set
 # CONFIG_WIMAX_GDM72XX is not set
 # CONFIG_LTE_GDM724X is not set
